<resources>
    <string name="btn1_start">Start</string>
    <string name="btn1_stop">Stop</string>
    <string name="btn2_start">Play</string>
    <string name="btn2_stop">Stop</string>
    <string name="app_name">META</string>
    <string name="btn_unbind">Go to unbind</string>
    <string name="btn_cancle">Cancle</string>
    <string name="btn_ok">Ok</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_know">Got it</string>
    <string name="activate_username">User name</string>
    <string name="activate_password">Password</string>
    <string name="activate_input_phone_number">Please enter your phone number</string>
    <string name="activate_input_password">Please input a password</string>
    <string name="activate_btn_text">Activation</string>
    <string name="activate_lose_password">Forget password</string>
    <string name="call_hari">Call customer service</string>
    <string name="upgrade_meta">Upgrade META helmet device version</string>
    <string name="upgrade_text">The current META helmet software version is too low, please upgrade, and then activate the use of META helmet.</string>
    <string name="setup_0">Connect the phone and META helmet through the USB line, quickly activate and use META</string>
    <string name="setup_1">Click the call intelligent customer service, a key to connect to the customer service</string>
    <string name="setup_2">Please help the family members of the blind friends and relatives of the photos and draw common walking map</string>
    <string name="usb_status">Please connect your phone and META helmet via USB line</string>
    <string name="activate_user_name_or_password_error">User name or password is incorrect, please re-enter.</string>
    <string name="activate_network_unavailable">Connection failed, please check your network settings.</string>
    <string name="activate_user_name_or_password_empty">Username or password cannot be empty. Please re-enter.</string>
    <string name="hub_family_assistance">Family assistance</string>
    <string name="hub_dialog_title">Please remove the bindings for META before binding</string>
    <string name="family_help_title">Family assistance</string>
    <string name="family_manage_title">Family management</string>
    <string name="family_manage_add_cancle">Cancle</string>
    <string name="family_manage_add_complete">Complete</string>
    <string name="family_item_add_photo">Add picture</string>
    <string name="family_item_add_name">Full name</string>
    <string name="family_item_add_remark">Remarks</string>
    <string name="family_item_add_name_hint">Please enter name</string>
    <string name="family_item_add_remark_hint">Please enter a note</string>
    <string name="personal_information_title">Personal information</string>
    <string name="personal_information_edit">Edit</string>
    <string name="personal_information_name">Full name</string>
    <string name="personal_information_telephone">Telephone</string>
    <string name="personal_information_address">Address</string>
    <string name="personal_information_emergency_contact">Emergency contact</string>
    <string name="personal_information_message">Personal name and phone number can not be edited by APP</string>
    <string name="personal_information_edit_cancle">Cancle</string>
    <string name="personal_information_edit_complete">Complete</string>
    <string name="personal_information_edit_name_hint">Please enter name</string>
    <string name="personal_information_edit_address_hint">Please enter an address</string>
    <string name="personal_information_edit_telephone_hint">Please enter the phone</string>
    <string name="equipment_information_title">Equipment information</string>
    <string name="equipment_information_meta">META helmet</string>
    <string name="equipment_information_telephone">Mobile phone</string>
    <string name="equipment_information_id">ID:</string>
    <string name="equipment_information_version">Version number:</string>
    <string name="equipment_information_unbound">Unbound for equipment</string>
    <string name="equipment_dialog_message">Are you make sure to unbound for current equipment</string>
    <string name="equipment_dialog_cancle">Cancle</string>
    <string name="equipment_dialog_ok">Ok</string>
    <string name="update_password_edit_old_hint">The old password(6-10 a-zA-Z0-9)</string>
    <string name="update_password_edit_new_hint">The new password(6-10 a-zA-Z0-9)</string>
    <string name="update_password_edit_re_new_hint">The new password again(6-10 a-zA-Z0-9)</string>
    <string name="update_password_edit_save">Save</string>
    <string name="update_password_title">Update password</string>
    <string name="retrieve_password_title">Retrieve Password</string>
    <string name="retrieve_password_get_code">Get verification code</string>
    <string name="retrieve_password_enter_code_hint">Please enter verification code</string>
    <string name="retrieve_password_set_password">Set password(6-10 a-zA-Z0-9)</string>
    <string name="retrieve_password_submit">Submit</string>
    <string name="update_pictur">Edit picture</string>
    <string name="remove_family">Delete friends</string>
    <string name="family_item_add_cancle">Cancle</string>
    <string name="family_item_add_complete">Complete</string>
    <string name="remove_family_cancle">Cancle</string>
    <string name="remove_family_ok">Complete</string>
    <string name="remove_family_sure">Are you sure you want to delete your buddy %s?</string>
    <string name="hub_tts_call">Double click to call customer service</string>
    <string name="hub_calling">Connecting intelligent customer service...</string>
    <string name="hub_disconnection">Disconnect</string>
    <string name="hub_in_connection">Connected to intelligent customer service</string>
    <string name="hub_disconning">Hang in...</string>
    <string name="hub_call_end">Call end</string>
    <string name="hub_tts_on_connection">Connecting intelligent customer service, please wait a moment</string>
    <string name="hub_tts_in_connection">Has been connected to the customer service</string>
    <string name="hub_tts_disconnection">Double click on the connection with the intelligent customer service</string>
    <string name="hub_tts_end">Thank you for your use</string>
    <string name="hub_tts_network_error">Network anomaly, has stopped calling customer service, please try again later</string>
    <string name="hub_tts_service_error">The server has been stopped and the customer service has been stopped. Please try again later</string>
    <string name="hub_tts_device_error">The device has been stopped and the customer service has been stopped. Please try again later</string>
    <string name="hub_tts_rejected">No free customer service, please dial artificial customer service later </string>
    <string name="setting">Setting</string>
    <string name="history">History records</string>
    <string name="service_address">Cloud Server IP:</string>
    <string name="service_port">Cloud Server Port:</string>
    <string name="low_Pawer">Low Pawer:</string>
    <string name="low_Health">Low Health:</string>
    <string name="save">Save</string>
    <string name="save_success">Save Success</string>
    <string-array name="family_help">
        <item>Family management</item>
        
        <item>Personal information</item>
        
        <item>Update password</item>
        
    </string-array>
    <string name="again_exit">Double click or long press  exit</string>
    <string name="skip_activation">Skip The Activation</string>
    <string name="no_meta">No Meta</string>
    <string name="hariService_address">Hari Service IP: </string>
    <string name="hariService_port">Hari Service Port: </string>
    <string name="hariService_videoWidth">Hari Service Video Width:</string>
    <string name="hariService_videoHeight">Hari Service Video Height:</string>
    <string name="hariService_videofps">Hari Service Video FPS：</string>
    <string name="hariService_customer">customer: </string>
    <string name="NAVI_CMD_FORWARD_TIPS">go straight</string>
    <string name="NAVI_CMD_TERMINATE_TIPS">Navigation stopped</string>
    <string name="NAVI_CMD_BACKWARD_TIPS">stop</string>
    <string name="NAVI_CMD_PAD_LEFT_TIPS">one step left</string>
    <string name="NAVI_CMD_PAD_RIGHT_TIPS">one step right</string>
    <string name="NAVI_CMD_TURN_RIGHT_TIPS">Turn right</string>
    <string name="NAVI_CMD_TURN_LEFT_TIPS">Turn left</string>
    <string name="NAVI_CMD_DEGREE_TIPS">degree</string>
    <string name="NAVI_CMD_FORWARD_DISTANCE_TIPS_PREFIX">%1$s m ahead safe</string>
    <string name="NAVI_CMD_TURN_BACK_TIPS">Turn back</string>
    <string name="NAVI_CMD_TURN_LEFT_FORWARD_TIPS">Turn left forwards</string>
    <string name="NAVI_CMD_TURN_LEFT_BACK_TIPS">Turn left backwards</string>
    <string name="NAVI_CMD_TURN_RIGHT_FORWARD_TIPS">Turn right forwards</string>
    <string name="NAVI_CMD_TURN_RIGHT_BACK_TIPS">Turn right backwards</string>
    <string name="hub_call_stop">Stop Call</string>
    <string name="no_internet">The network is not available.</string>
    <string name="speech_recognition_failed">The speech recognition  failing to start.</string>
    <string name="hariService_username">User Name:</string>
    <string name="hariService_robot">Robot :</string>
    <string name="hariService_bitrate">Bitrate：</string>
    <string name="hariService_framerate">Frame rate：</string>
    <string name="hariService_tenantid">Tenant ID：</string>
    <string name="call_Abnormal_Disconnect">Call error and disconnect.</string>
    <string name="again_to_back">Double Click or long press To Back</string>
    <string name="to_back">Meta To Back</string>
    <string name="exit">Meta exit</string>
    <string name="call_many_times">Call for many times.</string>
    <string name="version">Version:</string>
    <string name="conect_meta">Please connect Meta</string>
    <string name="call_reject">caller connect failed</string>
    <string name="no_video_no_recognition">Please connect customer service</string>
    <string name="object_recognition">Object recognition</string>
    <string name="open">opened</string>
    <string name="close">closed</string>
    <string name="no_internet_navi">Network connection exception, navigation pause</string>
    <string name="param_setting">Parameter Setting</string>
    <string name="rom_update">Rom Update</string>
    <string name="hariService_password">PassWord：</string>
    <string name="auto_recognition">Automatic Identification</string>
    <string name="gps">Open GPS:</string>
    <string name="start_recognition">Open Recognize:</string>
    <string name="hello">Hello</string>
    <string name="navi_speak_pause">Hello, the navigation broadcast is suspended, please pay attention to safety.</string>
    <string name="no_connect_service">Please connect the service first</string>
    <string name="start_indoorNavi">Start indoor navigation</string>
    <string name="navi_end_1">User stop navigation</string>
    <string name="indoor_navi_end">The indoor navigation is end.</string>
    <string name="meta_conn">Meta connected</string>
    <string name="camera_wrong">The camera is wrong.</string>
    <string name="meta_unconn">Meta is unconnected</string>
    <string name="navi_end_2">The address query failed and the navigation ended </string>
    <string name="destination_switch">Destination switching, ready for navigation.</string>
    <string name="navi_gps_not_open">GPS is not open</string>
    <string name="navi_outdoor_disabled">Outdoor navigation has been disabled</string>
    <string name="navi_ready">Ready for navigation </string>
    <string name="route_plan">Please wait,the route is planning.</string>
    <string name="auxiliary_function">Auxiliary function</string>
    <string name="restart_voice_trigger">Restart Voice Trigger</string>
</resources>