<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/family_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/family_item_add_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_item_add_cancle"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/family_item_add_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_item_add_complete"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/family_item_add_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/family_item_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/family_item_add_photo"/>

    <FrameLayout
        style="@style/Activate_FragmentLayout"
        android:layout_margin="@dimen/activate_fragmentlayout_padding">
        <TextView
            style="@style/Activate_TextView"
            android:text="@string/family_item_add_name"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/family_item_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:hint="@string/family_item_add_name_hint"
            android:background="@null"
            android:layout_gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            />
    </FrameLayout>

    <FrameLayout
        style="@style/Activate_FragmentLayout"
        android:visibility="gone">
        <TextView
            style="@style/Activate_TextView"
            android:text="@string/family_item_add_remark"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/family_item_add_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:hint="@string/family_item_add_remark_hint"
            android:background="@null"
            android:layout_gravity="center_vertical"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            />
    </FrameLayout>

    <Button
        android:id="@+id/family_item_remove_friends"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/remove_family"
        android:layout_margin="20dp"
        android:visibility="gone"/>
</LinearLayout>