<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/family_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/retrieve_password_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/bg_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_password_title"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <com.cloudminds.meta.view.EditTextForNumberWithDel
            android:id="@+id/retrieve_password_telephone"
            style="@style/Update_Password_EditText"
            android:inputType="phone"
            android:maxLength="13"
            android:hint="@string/activate_input_phone_number"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.cloudminds.meta.view.EditTextWithDel
                android:id="@+id/retrieve_password_code"
                style="@style/Update_Password_EditText"
                android:hint="@string/retrieve_password_enter_code_hint"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:inputType="number"
                android:maxLength="6"
                />
            <Button
                android:id="@+id/retrieve_password_get_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/retrieve_password_get_code"/>
        </LinearLayout>

        <com.cloudminds.meta.view.EditTextWithDel
            android:id="@+id/retrieve_password_set_password"
            style="@style/Update_Password_EditText"
            android:hint="@string/retrieve_password_set_password"
            android:layout_marginTop="20dp"
            android:maxLength="10"/>

        <Button
            android:id="@+id/retrieve_password_set_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_password_submit"
            android:layout_marginTop="40dp"/>


    </LinearLayout>


</LinearLayout>