<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/family_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/update_password_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/bg_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_password_title"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <com.cloudminds.meta.view.EditTextWithDel
            android:id="@+id/update_password_old_password"
            style="@style/Update_Password_EditText"
            android:hint="@string/update_password_edit_old_hint"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLength="10"
            />

        <com.cloudminds.meta.view.EditTextWithDel
            android:id="@+id/update_password_new_password"
            style="@style/Update_Password_EditText"
            android:hint="@string/update_password_edit_new_hint"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLength="10"
            />

        <com.cloudminds.meta.view.EditTextWithDel
            android:id="@+id/update_password_re_new_password"
            style="@style/Update_Password_EditText"
            android:hint="@string/update_password_edit_re_new_hint"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLength="10"
            />

        <Button
            android:id="@+id/update_password_save"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:text="@string/update_password_edit_save"/>

    </LinearLayout>

</LinearLayout>