<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="right"
            android:text="@string/restart_voice_trigger"
            android:id="@+id/restart_voice_trigger"
            android:padding="10dp"
            android:clickable="true"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_meta"
            android:layout_gravity="right"
            android:padding="@dimen/activate_padding"
            android:id="@+id/no_Meta"
            android:clickable="true"
            />
    </LinearLayout>

    <Button
        android:id="@+id/hub_call_btn"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/circle_btn"
        android:textSize="28sp"
        android:text="@string/call_hari"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    <TextView
        android:id="@+id/hub_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/history"
            android:id="@+id/history"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            />
        <TextView
            android:id="@+id/auxiliary_function"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/auxiliary_function"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:clickable="true"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/setting"
            android:id="@+id/menu"
            android:padding="10dp"
            android:clickable="true"
            />
    </LinearLayout>


</LinearLayout>
