<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/family_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/callback"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/bg_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment_information_title"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/equipment_information_meta"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/equipment_information_id"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/equipment_information_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="123123123"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/equipment_information_version"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/equipment_information_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="123123123"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/equipment_information_telephone"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/equipment_information_id"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/equipment_information_j_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="123123123"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/equipment_information_version"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/equipment_information_j_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="123123123"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/equipment_information_unbound"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/equipment_information_unbound"
        android:layout_marginBottom="20dp"
        android:layout_margin="20dp"/>


</LinearLayout>